deployment-service-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-blog
  namespace: prod
  labels:
    env: prod
    app: personal-blog
spec:
  selector:
    matchLabels:
      app: personal-blog
  replicas: 2
  template:
    metadata:
      name: personal-blog
      labels:
        app: personal-blog
        name: personal-blog
        env: prod
    spec:
      containers:
        - name: nginx
          image: howinator/personal-blog:v1
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 10Mi
              cpu: 10m
---
apiVersion: v1
kind: Service
metadata:
  name: personal-blog
  namespace: prod
  labels:
    app: personal-blog
    env: prod
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: personal-blog
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: personal-blog
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    app: personal-blog
    env: prod
spec:
  rules:
    - host: howinator.io
      http:
        paths:
          - path: /
            backend:
              serviceName: personal-blog
              servicePort: 80
    - host: www.howinator.io
      http:
        paths:
          - path: /
            backend:
              serviceName: personal-blog
              servicePort: 80
  tls:
    - hosts:
        - howinator.io
        - www.howinator.io
      secretName: tls-howinator.io
---
